--- a/package.json
+++ b/package.json
@@ -41,6 +41,9 @@
     "typescript": "^5.5.3"
   },
   "dependencies": {
+    "@aws-cdk/aws-pipes-alpha": "^2.148.0-alpha.0",
+    "@aws-cdk/aws-pipes-sources-alpha": "^2.148.0-alpha.0",
+    "@aws-cdk/aws-pipes-targets-alpha": "^2.148.0-alpha.0",
     "aws-cdk-lib": "^2.1.0",
     "constructs": "^10.0.5"
   },
