--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "@aws-cdk/aws-pipes-alpha": "^2.148.0-alpha.0",
     "@aws-cdk/aws-pipes-sources-alpha": "^2.148.0-alpha.0",
     "@aws-cdk/aws-pipes-targets-alpha": "^2.148.0-alpha.0",
+    "@aws/pdk": "^0.23.46",
     "aws-cdk-lib": "^2.1.0",
+    "cdk-nag": "^2.28.157",
     "constructs": "^10.0.5"
   },
   "license": "Apache-2.0",
